# agent-swarm

./: .gitignore  pyproject.toml
examples/: multi_agent_coding.py
src/agent_swarm/: __init__.py
src/agent_swarm/agents/: coder.py  planner.py  researcher.py
src/agent_swarm/api/: server.py
src/agent_swarm/core/: agent.py  message_bus.py  orchestrator.py
src/agent_swarm/workflows/: dag.py
tests/: test_orchestrator.py
